# TrustLens

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/trustlens/: pipeline.py
src/trustlens.egg-info/: PKG-INFO  SOURCES.txt
src/trustlens/ingest/: openalex.py  pdf_fetcher.py
src/trustlens/llm/: batch_runner.py  prompt.py
src/trustlens/parse/: extractor.py  segmenter.py
src/trustlens/store/: database.py
tests/: test_llm.py  test_openalex.py  test_parse.py  test_store.py
